--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,17 @@ body {
   background-color: hsl(0, 0%, 95%);
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0, 0);
+  border: 0;
+}
+
 .grid-3-cols {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -106,6 +117,8 @@ body {
 
 /* Text */
 .heading {
+  display: inline-block;
+
   font-family: "Big Shoulders Display", sans-serif;
   font-size: 2.5rem;
   font-weight: 700;
